#6_4.[주석제거],[메소드로 묶기 시도],[멘토님 조언을 베이스로 코드 개편시도]